# drcompiler

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  GAP.md  INITIAL_SETUP.md  RATIONALE.md  README.md  build.sh  run.sh
benchmarks/: Makefile  div_chain.c  sqrt_consumers.c  transcendental_chain.c
cmake/modules/: GenerateDrcc.cmake
config/: drcc.cfg
docker/: base.Dockerfile  build.sh  cgeist-builder.Dockerfile  drcc-lean.Dockerfile  drcc.Dockerfile  llvm-builder.Dockerfile  onnx-mlir-lean.Dockerfile  onnx-mlir.Dockerfile  spec.Dockerfile
include/drcompiler/Transforms/: CMakeLists.txt  CpuCostModel.h  DataRecomputation.h  DataRecomputationIndexing.h  MemoryFission.h  Passes.h  Passes.td  RaiseMallocToMemRef.h
include/drcompiler/Transforms/DataRecomputation/: AnalysisState.h  CacheCostModel.h  DotEmitter.h  RematKernel.h
include/drcompiler/Transforms/DataRecomputation/Strategies/: ConstantGlobalFold.h  CrossFnOrdered.h  DirectForward.h  FullRemat.h  InterprocRemat.h  PartialRemat.h  Strategy.h
include/drcompiler/Transforms/Utils/: MemrefBaseAnalysis.h  OpDispatchUtils.h
lib/Transforms/: CMakeLists.txt  CpuCostModel.cpp  DataRecomputation.cpp  MemoryFission.cpp  RaiseMallocToMemRef.cpp
lib/Transforms/DataRecomputation/: CacheCostModel.cpp  RematKernel.cpp
lib/Transforms/DataRecomputation/Strategies/: ConstantGlobalFold.cpp  CrossFnOrdered.cpp  DirectForward.cpp  FullRemat.cpp  InterprocRemat.cpp  PartialRemat.cpp
lib/Transforms/Utils/: MemrefBaseAnalysis.cpp  OpDispatchUtils.cpp
research/: NO_POLYBENCH.md  PGO.md
scripts/: benchmark.sh  build-cgeist.sh  cache_latency_bench.c  drcc-docker.sh  gen_cpu_cost_model.py  instrumented-run.sh  onnx-bench.sh  onnx-compile.sh  onnx-dr-pipeline.sh  onnx-fair-bench.sh  onnx-run-bench.sh  onnx-to-mlir.sh  polybench-bench.sh  polybench-verify.sh  probe-cost-model-docker.sh  probe-cost-model.sh  run-onnx-bench.sh  run-polybench.sh  run-spec.sh
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  simple-provenance.mlir
test/DataRecomputation/: affine-call-clobbers.mlir  affine-for-store-load.mlir  affine-for.mlir  affine-if.mlir  affine-store-load.mlir  affine-store-memref-load.mlir  alloca-store-load.mlir  call-clobbers-arg.mlir  call-clobbers-global.mlir  call-no-memref-local.mlir  callee-memref2pointer-store-clobber.mlir  cast-store-load.mlir  chained-views.mlir  cost-model-array-keep.mlir  cost-model-cache-json-override.mlir  cost-model-footprint-evict.mlir  cost-model-footprint-nested.mlir  cost-model-footprint-retain.mlir  cost-model-footprint-warm-operand.mlir  cost-model-keep.mlir  cost-model-recompute.mlir  cross-fn-chained-conflict.mlir  cross-fn-chained-depth2.mlir  cross-fn-chained-loads.mlir  cross-fn-loop-affine.mlir  cross-fn-loop-conflict.mlir  cross-fn-loop-extract-const.mlir  cross-fn-loop-extract.mlir  cross-fn-loop-multi-reader.mlir  cross-fn-loop-nested.mlir  cross-fn-loop-scf.mlir  cross-function-ordered-recompute.mlir  external-func.mlir  for-loop-no-store.mlir  for-loop-store-in-body.mlir  for-may-zero-no-prior.mlir  forwarded-memref-arg.mlir  forwarded-memref.mlir  forwarded-reinterpret-cast.mlir  forwarded-reinterpreted-memref.mlir  (+64 more)
test/DataRecomputation/Inputs/: cache-override.json
test/DataRecomputation/per-index-soundness/: affine-trip1-positive.mlir  aliased-write-via-view.mlir  dynamic-trip-no-fold.mlir  escape-via-call.mlir  may-store-conditional.mlir  symbolic-poisons-const.mlir  two-writers-same-idx.mlir
test/DataRecomputation/trip-correlation/: correlated-alloc-positive.mlir  correlated-cross-loop.mlir  uncorrelated-alloc-negative.mlir
test/MemoryFission/: fission-bounds-differ-lb-operand.mlir  fission-nested-loop.mlir  fission-sqrt-div.mlir
test/ONNX/: mnist.tmp
test/ONNX/intermediates/: mnist.01-raw.mlir  mnist.02-affine.mlir  mnist.03-dr.mlir  mnist.04-krnl-llvm.mlir  mnist.05-llvm.mlir  mnist.06.ll
test/RaiseMallocToMemRef/: bailout-escape.mlir  gep-malloc.mlir  identity-memref2pointer.mlir  pipeline-integration.mlir  pointer2memref-load-store.mlir  residual-memref2pointer.mlir  simple-malloc.mlir  static-malloc.mlir  struct-alloca-identity.mlir  subindex-lowering.mlir
tools/: CMakeLists.txt
tools/dr-opt/: CMakeLists.txt  dr-opt.cpp
tools/drcc/: drcc.sh.in  rewrite-struct-memrefs.py
